tests/paczka1/fuzzy1/89382925.err
Error in line 1: uXtqquR A797 92,5
Error in line 3: W11SGB A901 82,7
Error in line 8: hIkH18CrCFJ S547 15,7
Error in line 18: W11SGB S547 22,1
